--- a/ANGULAR/html/Index.html
+++ b/ANGULAR/html/Index.html
@@ -64,6 +64,7 @@
     <script src="../js/controllers/HomeController.js"></script>
     <script src="../js/controllers/HomeController_2.js"></script>
     <script src="../js/controllers/EventsController.js"></script>
+    <script src="../js/controllers/BlogsController.js"></script>
     <script src="../js/controllers/VideoController.js"></script>
     <script src="../js/controllers/RegisterController.js"></script>
     <script src="../js/controllers/RegisterStep1Controller.js"></script>
@@ -72,6 +73,7 @@
 
 
     <script src="../js/services/EventsService.js"></script>
+    <script src="../js/services/BlogsService.js"></script>
     <script src="../js/services/MembersService.js"></script>
     <script src="../js/services/VideoService.js"></script>
 </body>
