--- a/ANGULAR/html/Dashboard/dashboard.html
+++ b/ANGULAR/html/Dashboard/dashboard.html
@@ -17,6 +17,7 @@
     <script src="../../js/controllers/HomeController.js"></script>
     <script src="../../js/controllers/HomeController_2.js"></script>
     <script src="../../js/controllers/EventsController.js"></script>
+    <script src="../../js/controllers/BlogsController.js"></script>
     <script src="../../js/controllers/VideoController.js"></script>
     <script src="../../js/controllers/RegisterController.js"></script>
     <script src="../../js/controllers/RegisterStep1Controller.js"></script>
@@ -25,6 +26,7 @@
 
 
     <script src="../../js/services/EventsService.js"></script>
+    <script src="../../js/services/BlogsService.js"></script>
     <script src="../../js/services/MembersService.js"></script>
     <script src="../../js/services/VideoService.js"></script>
     
@@ -41,7 +43,7 @@
         <ul ng-controller="NavBarController">
             <li><a href="list-recipe.html" class="nav-link">Recipes</a></li>
             <li><a href="#/list-event" class="nav-link" ng-class="{'active-nav': isActive('/list-event')}">Events</a></li>
-            <li><a href="list-blog.html" class="nav-link">Blog</a></li>
+            <li><a href="#/list-blog" class="nav-link">Blog</a></li>
             <li><a href="/html/Register.html" class="nav-link subscribe">Logout</a></li>
         </ul>
         <div id="hamburger">
