--- a/ANGULAR/html/Dashboard/dashboard.html
+++ b/ANGULAR/html/Dashboard/dashboard.html
@@ -14,6 +14,7 @@
     <script src="../../js/App.js"></script>
 
     <script src="../../js/controllers/NavBarController.js"></script>
+    <script src="../../js/controllers/LoginController.js"></script>
     <script src="../../js/controllers/HomeController.js"></script>
     <script src="../../js/controllers/HomeController_2.js"></script>
     <script src="../../js/controllers/EventsController.js"></script>
@@ -44,7 +45,7 @@
             <li><a href="list-recipe.html" class="nav-link">Recipes</a></li>
             <li><a href="#/list-event" class="nav-link" ng-class="{'active-nav': isActive('/list-event')}">Events</a></li>
             <li><a href="#/list-blog" class="nav-link">Blog</a></li>
-            <li><a href="/html/Register.html" class="nav-link subscribe">Logout</a></li>
+            <li><a class="nav-link" ng-click="logoutAdmin()">Logout</a></li>
         </ul>
         <div id="hamburger">
             <span class="bar"></span>
