--- a/ANGULAR/html/Index.html
+++ b/ANGULAR/html/Index.html
@@ -29,7 +29,7 @@
                 <li><a href="/ANGULAR/html/Recipes.html" class="nav-link">Recipes</a></li>
                 <li><a href="#/events" class="nav-link" ng-class="{'active-nav': isActive('/events')}">Events</a></li>
                 <li><a href="/ANGULAR/html/Blog.html" class="nav-link">Blog</a></li>
-                <li><a href="/ANGULAR/html/Login.html" class="nav-link subscribe">Login</a></li>
+                <li><a href="#/login" class="nav-link subscribe">Login</a></li>
                 <li><a href="#/register" class="nav-link subscribe">Subscribe</a></li>
             </ul>
             <div id="hamburger">
@@ -61,6 +61,7 @@
     <script src="../js/App.js"></script>
 
     <script src="../js/controllers/NavBarController.js"></script>
+    <script src="../js/controllers/LoginController.js"></script>
     <script src="../js/controllers/HomeController.js"></script>
     <script src="../js/controllers/HomeController_2.js"></script>
     <script src="../js/controllers/EventsController.js"></script>
