--- a/ANGULAR/html/Index_2.html
+++ b/ANGULAR/html/Index_2.html
@@ -10,6 +10,11 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="../css/Navbar.css">
     <link rel="stylesheet" href="../css/Footer.css">
+    <style>
+        html, body {
+          display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -27,6 +32,7 @@
                 <li><a href="/ANGULAR/html/Blog.html" class="nav-link">Blog</a></li>
                 <li><a href="#/videos" class="nav-link subscribe">Videos</a></li>
                 <li><a href="#/list-video" class="nav-link subscribe">Admin Videos</a></li>
+                <li><a class="nav-link subscribe" ng-click="logoutMember()">Logout</a></li>
             </ul>
             <div id="hamburger">
                 <span class="bar"></span>
@@ -57,10 +63,12 @@
     <script src="../js/App.js"></script>
 
     <script src="../js/controllers/NavBarController.js"></script>
+    <script src="../js/controllers/LoginController.js"></script>
     <script src="../js/controllers/HomeController.js"></script>
     <script src="../js/controllers/HomeController_2.js"></script>
     <script src="../js/controllers/EventsController.js"></script>
     <script src="../js/controllers/VideoController.js"></script>
+    <script src="../js/controllers/BlogsController.js"></script>
     <script src="../js/controllers/RegisterController.js"></script>
     <script src="../js/controllers/RegisterStep1Controller.js"></script>
     <script src="../js/controllers/RegisterStep2Controller.js"></script>
@@ -68,6 +76,7 @@
 
 
     <script src="../js/services/EventsService.js"></script>
+    <script src="../js/services/BlogsService.js"></script>
     <script src="../js/services/MembersService.js"></script>
     <script src="../js/services/VideoService.js"></script>
 </body>
