--- a/ANGULAR/html/Dashboard/dashboard.html
+++ b/ANGULAR/html/Dashboard/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List Event</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="../../css/Navbar.css" >
     <script src="../../js/angular.min.js"></script>
@@ -24,12 +25,16 @@
     <script src="../../js/controllers/RegisterStep1Controller.js"></script>
     <script src="../../js/controllers/RegisterStep2Controller.js"></script>
     <script src="../../js/controllers/RegisterStep3Controller.js"></script>
+    <script src="../../js/controllers/MentorController.js"></script>
+    <script src="../../js/controllers/ProfileController.js"></script>
 
 
     <script src="../../js/services/EventsService.js"></script>
     <script src="../../js/services/BlogsService.js"></script>
     <script src="../../js/services/MembersService.js"></script>
     <script src="../../js/services/VideoService.js"></script>
+    <script src="../../js/services/MentorService.js"></script>
+    <script src="../../js/services/ProfileService.js"></script>
     
 </head>
 <body>
@@ -45,6 +50,7 @@
             <li><a href="list-recipe.html" class="nav-link">Recipes</a></li>
             <li><a href="#/list-event" class="nav-link" ng-class="{'active-nav': isActive('/list-event')}">Events</a></li>
             <li><a href="#/list-blog" class="nav-link">Blog</a></li>
+            <li><a href="#/list-video" class="nav-link">Videos</a></li>
             <li><a class="nav-link" ng-click="logoutAdmin()">Logout</a></li>
         </ul>
         <div id="hamburger">
