--- a/ANGULAR/html/Index.html
+++ b/ANGULAR/html/Index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="yogo">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List Event</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <link rel="stylesheet" href="../css/Navbar.css">
     <link rel="stylesheet" href="../css/Footer.css">
     <style>
-        html, body {
-          display: none;
+        html,
+        body {
+            display: none;
         }
     </style>
 </head>
+
 <body>
 
     <div id="nav">
@@ -29,7 +32,7 @@
                 <li><a href="/ANGULAR/html/Recipes.html" class="nav-link">Recipes</a></li>
                 <li><a href="#/events" class="nav-link" ng-class="{'active-nav': isActive('/events')}">Events</a></li>
                 <li><a href="#/blogs" class="nav-link">Blog</a></li>
-                <li><a href="/ANGULAR/html/Login.html" class="nav-link subscribe">Login</a></li>
+                <li><a href="#/login" class="nav-link subscribe">Login</a></li>
                 <li><a href="#/register" class="nav-link subscribe">Subscribe</a></li>
             </ul>
             <div id="hamburger">
@@ -41,7 +44,7 @@
     </div>
 
     <div ng-view>
-        
+
     </div>
 
     <footer ng-show="showFooter">
@@ -57,10 +60,11 @@
     <script src="../js/angular.min.js"></script>
     <script src="../js/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-sanitize.min.js"></script>
-    
+
     <script src="../js/App.js"></script>
 
     <script src="../js/controllers/NavBarController.js"></script>
+    <script src="../js/controllers/LoginController.js"></script>
     <script src="../js/controllers/HomeController.js"></script>
     <script src="../js/controllers/HomeController_2.js"></script>
     <script src="../js/controllers/EventsController.js"></script>
@@ -70,11 +74,16 @@
     <script src="../js/controllers/RegisterStep1Controller.js"></script>
     <script src="../js/controllers/RegisterStep2Controller.js"></script>
     <script src="../js/controllers/RegisterStep3Controller.js"></script>
+    <script src="../js/controllers/MentorController.js"></script>
+    <script src="../js/controllers/ProfileController.js"></script>
 
 
     <script src="../js/services/EventsService.js"></script>
     <script src="../js/services/BlogsService.js"></script>
     <script src="../js/services/MembersService.js"></script>
     <script src="../js/services/VideoService.js"></script>
+    <script src="../js/services/MentorService.js"></script>
+    <script src="../js/services/ProfileService.js"></script>
 </body>
+
 </html>
