--- a/ANGULAR/html/Index.html
+++ b/ANGULAR/html/Index.html
@@ -47,7 +47,7 @@
 
     </div>
 
-    <footer>
+    <footer ng-show="showFooter">
         <h2>Yogo</h2>
         <nav>
             <a href="/html/Recipes.html">Recipes</a>
